--- a/02_sightlines_plot.ipynb
+++ b/02_sightlines_plot.ipynb
@@ -16,67 +16,39 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7a030f10",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Box({'path_to_caches': 'W:/DATA/Projects/urbaspace/caches', 'path_to_building_clustering': 'W:/DATA/Projects/urbaspace/INBIAC_CLUSTERING'})"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import os \n",
-    "os.environ[\"PREFECT__USER_CONFIG_PATH\"] = \"c:\\\\git_cloud\\\\urbaspace\\\\flows\\\\config.toml\"\n",
-    "import prefect\n",
-    "config=prefect.config\n",
-    "display(config.urbaspace)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "id": "f623dcb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..')\n",
-    "from prefect import Flow, Task\n",
-    "import prefect\n",
     "import datetime\n",
     "import math\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from kinaxia.datasets.postgis import *\n",
-    "from kinaxia.geometry import *\n",
-    "import kinaxia.constants as constants\n",
-    "\n",
-    "from rtree import index as rtree_index\n",
-    "import prefect\n",
-    "from shapely.ops import unary_union\n",
-    "import kinaxia.urbaspace.caches\n",
+    "import time\n",
+    "import geopandas as gpd\n",
+    "import gc\n",
+    "import seaborn as sns\n",
     "import gc\n",
     "import numpy as np\n",
     "import toml\n",
     "import os \n",
-    "from shapely.geometry import Point,Polygon,MultiPoint,MultiLineString,LineString,box\n",
-    "\n",
-    "from sklearn.cluster import DBSCAN\n",
     "import sklearn\n",
+    "\n",
+    "from rtree import index as rtree_index\n",
+    "from shapely.ops import unary_union\n",
+    "from shapely.geometry import Point,Polygon,MultiPoint,MultiLineString,LineString,box\n",
+    "from sklearn.cluster import DBSCAN\n",
     "from datetime import datetime as dt\n",
-    "import time\n",
-    "import geopandas as gpd\n",
     "\n",
     "\n",
-    "from kinaxia.utils import ProgressBar\n",
-    "import gc\n",
-    "import seaborn as sns"
+    "## Closed-source\n",
+    "\n",
+    "# from kinaxia.utils import ProgressBar\n",
+    "# import kinaxia.urbaspace.caches\n",
+    "# from kinaxia.datasets.postgis import *\n",
+    "# from kinaxia.geometry import *\n",
+    "# import kinaxia.constants as constants"
    ]
   },
   {
@@ -1650,7 +1622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
