Load road network from pickle

--- a/02_sightlines_plot.ipynb
+++ b/02_sightlines_plot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "f623dcb8",
    "metadata": {},
    "outputs": [],
@@ -34,6 +34,7 @@
     "import toml\n",
     "import os \n",
     "import sklearn\n",
+    "import pickle\n",
     "\n",
     "from rtree import index as rtree_index\n",
     "from shapely.ops import unary_union\n",
@@ -61,14 +62,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "166acd6e",
    "metadata": {
     "lines_to_next_cell": 2
    },
    "outputs": [],
    "source": [
-    "PARAM_insee_layer_name,PARAM_insee_code = 'samples','place_de_gaulle'"
+    "PARAM_insee_layer_name,PARAM_insee_code = 'samples','06'"
    ]
   },
   {
@@ -107,16 +108,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "0a2d771d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fs_cache = kinaxia.urbaspace.caches.FileSystemCache(config['urbaspace']['path_to_caches'])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ccc8a317",
    "metadata": {},
@@ -126,24 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "da6ae73c",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[==================================================] 100% (0 s) DONE.e convex_hull buffer at @50 meters  ..."
-     ]
-    },
-    {
      "data": {
       "image/svg+xml": [
-       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"1032633.2919999999 6284169.392 753.5160000001779 662.3159999996424\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,12569001.1)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"5.023440000001186\" opacity=\"0.6\" d=\"M 1033130.3,6284197.3 L 1032753.1,6284202.9 L 1032668.8,6284403.5 L 1032661.2,6284611.5 L 1032663.0,6284711.7 L 1032677.8,6284740.0 L 1032708.1,6284782.2 L 1032908.8,6284797.8 L 1033002.1,6284803.8 L 1033122.8,6284788.7 L 1033123.2,6284788.6 L 1033358.9,6284706.7 L 1033310.4,6284282.7 L 1033275.8,6284248.7 L 1033130.3,6284197.3 z\" /></g></svg>"
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"300\" height=\"300\" viewBox=\"1023297.552 6281078.552 4064.6959999999963 4340.195999999531\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,12566497.3)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"28.93463999999687\" opacity=\"0.6\" d=\"M 1026606.4,6281239.3 L 1024545.6,6281300.9 L 1023766.5,6281436.9 L 1023695.4,6281460.4 L 1023674.2,6281490.8 L 1023458.3,6284550.2 L 1026550.0,6285258.0 L 1027033.4,6283994.0 L 1027184.1,6283015.0 L 1027201.5,6281522.7 L 1027029.5,6281348.7 L 1026606.4,6281239.3 z\" /></g></svg>"
       ],
       "text/plain": [
-       "<shapely.geometry.polygon.Polygon at 0x21a1bf1dab0>"
+       "<POLYGON ((1026606.4 6281239.3, 1024545.6 6281300.9, 1023766.5 6281436.9, 10...>"
       ]
      },
      "metadata": {},
@@ -151,14 +135,8 @@
     }
    ],
    "source": [
-    "progress = ProgressBar(3)\n",
+    "gdf_streets = pd.read_pickle(\"my_results/method_1/06_alpes_maritimes_clip_road_network.pickle\")\n",
     "\n",
-    "progress.progress_step('Loading roads geometries ...')\n",
-    "filename = f'{PARAM_insee_layer_name}_{PARAM_insee_code}_sightlines_road_network_dataframe'\n",
-    "gdf_streets = fs_cache.load_pickle('road_sightlines',filename)\n",
-    "\n",
-    "\n",
-    "progress.progress_step(f'Compute convex_hull buffer at @{PARAM_sight_line_width} meters  ...')\n",
     "# EXTENDS roads points/nodes to buffer size by computing convex hull of all streets\n",
     "points = []\n",
     "for i,res in gdf_streets.iterrows():\n",
@@ -166,9 +144,6 @@
     "        points.append(pt) \n",
     "mpt = MultiPoint(points)\n",
     "hull = mpt.convex_hull\n",
-    "\n",
-    "\n",
-    "progress.progress_step(f'DONE.')\n",
     "\n",
     "plot_extension_area =  hull.buffer(PARAM_sight_line_width)\n",
     "\n",
