--- a/02_sightlines_plot.ipynb
+++ b/02_sightlines_plot.ipynb
@@ -163,17 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "af0067c2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[==================================================] 100% (0 s) POSTGIS - 1673 items fetched"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -196,46 +189,40 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>contenance</th>\n",
-       "      <th>geometry</th>\n",
        "      <th>parcel_id</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
+       "      <th>geometry</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>06004000AY0210</th>\n",
-       "      <td>10992</td>\n",
-       "      <td>POLYGON ((1032620.072 6284755.545, 1032628.419...</td>\n",
-       "      <td>06004000AY0210</td>\n",
+       "      <th>0</th>\n",
+       "      <td>968</td>\n",
+       "      <td>0</td>\n",
+       "      <td>POLYGON ((1023777.669 6282894.227, 1023767.444...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000AY0041</th>\n",
-       "      <td>665</td>\n",
-       "      <td>POLYGON ((1032809.503 6284871.256, 1032814.058...</td>\n",
-       "      <td>06004000AY0041</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1080</td>\n",
+       "      <td>1</td>\n",
+       "      <td>POLYGON ((1023750.666 6282866.870, 1023750.286...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000AY0053</th>\n",
-       "      <td>90</td>\n",
-       "      <td>POLYGON ((1032620.417 6284756.521, 1032622.571...</td>\n",
-       "      <td>06004000AY0053</td>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>POLYGON ((1023769.081 6282810.204, 1023760.601...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000AY0208</th>\n",
-       "      <td>17</td>\n",
-       "      <td>POLYGON ((1032721.150 6284834.867, 1032721.376...</td>\n",
-       "      <td>06004000AY0208</td>\n",
+       "      <th>3</th>\n",
+       "      <td>385</td>\n",
+       "      <td>3</td>\n",
+       "      <td>POLYGON ((1023753.749 6282915.758, 1023750.272...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000AY0209</th>\n",
-       "      <td>4414</td>\n",
-       "      <td>POLYGON ((1032717.120 6284866.341, 1032714.979...</td>\n",
-       "      <td>06004000AY0209</td>\n",
+       "      <th>4</th>\n",
+       "      <td>318</td>\n",
+       "      <td>4</td>\n",
+       "      <td>POLYGON ((1023753.416 6282942.227, 1023753.434...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -244,70 +231,55 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000BL0494</th>\n",
-       "      <td>588</td>\n",
-       "      <td>POLYGON ((1032646.581 6284667.739, 1032644.344...</td>\n",
-       "      <td>06004000BL0494</td>\n",
+       "      <th>8261</th>\n",
+       "      <td>396</td>\n",
+       "      <td>8261</td>\n",
+       "      <td>POLYGON ((1026920.547 6283554.224, 1026941.780...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000BL0548</th>\n",
-       "      <td>221</td>\n",
-       "      <td>POLYGON ((1032650.788 6284696.405, 1032642.972...</td>\n",
-       "      <td>06004000BL0548</td>\n",
+       "      <th>8262</th>\n",
+       "      <td>8551</td>\n",
+       "      <td>8262</td>\n",
+       "      <td>POLYGON ((1026951.940 6283652.611, 1026963.317...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000BL0546</th>\n",
-       "      <td>255</td>\n",
-       "      <td>POLYGON ((1032648.987 6284684.247, 1032635.769...</td>\n",
-       "      <td>06004000BL0546</td>\n",
+       "      <th>8263</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8263</td>\n",
+       "      <td>POLYGON ((1026853.109 6283609.269, 1026854.947...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000BL0549</th>\n",
-       "      <td>14</td>\n",
-       "      <td>POLYGON ((1032638.369 6284717.181, 1032638.467...</td>\n",
-       "      <td>06004000BL0549</td>\n",
+       "      <th>8264</th>\n",
+       "      <td>85</td>\n",
+       "      <td>8264</td>\n",
+       "      <td>POLYGON ((1026891.582 6283730.209, 1026891.991...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>06004000BL0547</th>\n",
-       "      <td>5</td>\n",
-       "      <td>POLYGON ((1032650.553 6284692.064, 1032650.313...</td>\n",
-       "      <td>06004000BL0547</td>\n",
+       "      <th>8265</th>\n",
+       "      <td>1614</td>\n",
+       "      <td>8265</td>\n",
+       "      <td>POLYGON ((1026871.458 6283737.201, 1026891.582...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1673 rows × 3 columns</p>\n",
+       "<p>8266 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                contenance                                           geometry  \\\n",
-       "id                                                                              \n",
-       "06004000AY0210       10992  POLYGON ((1032620.072 6284755.545, 1032628.419...   \n",
-       "06004000AY0041         665  POLYGON ((1032809.503 6284871.256, 1032814.058...   \n",
-       "06004000AY0053          90  POLYGON ((1032620.417 6284756.521, 1032622.571...   \n",
-       "06004000AY0208          17  POLYGON ((1032721.150 6284834.867, 1032721.376...   \n",
-       "06004000AY0209        4414  POLYGON ((1032717.120 6284866.341, 1032714.979...   \n",
-       "...                    ...                                                ...   \n",
-       "06004000BL0494         588  POLYGON ((1032646.581 6284667.739, 1032644.344...   \n",
-       "06004000BL0548         221  POLYGON ((1032650.788 6284696.405, 1032642.972...   \n",
-       "06004000BL0546         255  POLYGON ((1032648.987 6284684.247, 1032635.769...   \n",
-       "06004000BL0549          14  POLYGON ((1032638.369 6284717.181, 1032638.467...   \n",
-       "06004000BL0547           5  POLYGON ((1032650.553 6284692.064, 1032650.313...   \n",
+       "      contenance  parcel_id                                           geometry\n",
+       "0            968          0  POLYGON ((1023777.669 6282894.227, 1023767.444...\n",
+       "1           1080          1  POLYGON ((1023750.666 6282866.870, 1023750.286...\n",
+       "2              0          2  POLYGON ((1023769.081 6282810.204, 1023760.601...\n",
+       "3            385          3  POLYGON ((1023753.749 6282915.758, 1023750.272...\n",
+       "4            318          4  POLYGON ((1023753.416 6282942.227, 1023753.434...\n",
+       "...          ...        ...                                                ...\n",
+       "8261         396       8261  POLYGON ((1026920.547 6283554.224, 1026941.780...\n",
+       "8262        8551       8262  POLYGON ((1026951.940 6283652.611, 1026963.317...\n",
+       "8263           8       8263  POLYGON ((1026853.109 6283609.269, 1026854.947...\n",
+       "8264          85       8264  POLYGON ((1026891.582 6283730.209, 1026891.991...\n",
+       "8265        1614       8265  POLYGON ((1026871.458 6283737.201, 1026891.582...\n",
        "\n",
-       "                     parcel_id  \n",
-       "id                              \n",
-       "06004000AY0210  06004000AY0210  \n",
-       "06004000AY0041  06004000AY0041  \n",
-       "06004000AY0053  06004000AY0053  \n",
-       "06004000AY0208  06004000AY0208  \n",
-       "06004000AY0209  06004000AY0209  \n",
-       "...                        ...  \n",
-       "06004000BL0494  06004000BL0494  \n",
-       "06004000BL0548  06004000BL0548  \n",
-       "06004000BL0546  06004000BL0546  \n",
-       "06004000BL0549  06004000BL0549  \n",
-       "06004000BL0547  06004000BL0547  \n",
-       "\n",
-       "[1673 rows x 3 columns]"
+       "[8266 rows x 3 columns]"
       ]
      },
      "metadata": {},
@@ -315,20 +287,10 @@
     }
    ],
    "source": [
-    "progress = ProgressBar(2)\n",
-    "progress.progress_step('POSTGIS fecth - Parcels ...')\n",
-    "gdf_parcels = load_postgis_objects_from_area(postgres_create_engine(config, 'cadastre'),\n",
-    "                                        postgres_table_name(config, 'cadastre', 'parcels'),\n",
-    "                                        plot_extension_area,\n",
-    "                                        constants.PROJECTION_L93,\n",
-    "                                        id_field='id',\n",
-    "                                        geometry_field='geometry',\n",
-    "                                        other_fields=['contenance'],\n",
-    "                                        external_join_mapping=None,\n",
-    "                                        verbose_function=None)\n",
+    "gdf_parcels = gpd.read_file(\"data/select/gdf_parcels_select.gpkg\")\n",
     "\n",
     "gdf_parcels['parcel_id']=gdf_parcels.index\n",
-    "progress.progress_step(f'POSTGIS - {len(gdf_parcels)} items fetched')\n",
+    "\n",
     "display(gdf_parcels)"
    ]
   },
