--- a/02_sightlines_plot.ipynb
+++ b/02_sightlines_plot.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f623dcb8",
    "metadata": {},
    "outputs": [],
@@ -35,6 +35,7 @@
     "import os \n",
     "import sklearn\n",
     "import pickle\n",
+    "import rtree\n",
     "\n",
     "from rtree import index as rtree_index\n",
     "from shapely.ops import unary_union\n",
@@ -718,33 +719,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "de6c3d44",
+   "execution_count": 12,
+   "id": "78d05ea8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[==================================================] 100% (0 s) RTREE parcels - DONE."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "progress = ProgressBar(2)\n",
-    "## Build Spatial indexes\n",
-    "progress.progress_step('RTREE parcels ...')\n",
-    "rtree_parcels = RtreeIndex(\"parcels\", gdf_parcels)\n",
-    "progress.progress_step('RTREE parcels - DONE.')"
+    "class RtreeIndex:\n",
+    "    gdf = None\n",
+    "    rtree_index = None\n",
+    "    geom_rtree_list = None\n",
+    "    uid_rtree_list = None\n",
+    "    name = None\n",
+    "    verbose_function = None\n",
+    "\n",
+    "    def __init__(self, name, gdf, verbose_function=None):\n",
+    "        self.name = name\n",
+    "        self.gdf = gdf\n",
+    "        self.verbose_function=verbose_function\n",
+    "        rtree_index = rtree.index.Index()\n",
+    "        # build spatial index\n",
+    "        self.log(\"rtree creation...\")\n",
+    "        geom_rtree_list = []\n",
+    "        uid_rtree_list = []\n",
+    "        rtree_id = 0\n",
+    "        for uid, res in gdf.iterrows():\n",
+    "            geom = res.geometry\n",
+    "            geom_rtree_list.append(geom)\n",
+    "            uid_rtree_list.append(uid)\n",
+    "            rtree_index.insert(rtree_id, geom.bounds)\n",
+    "            rtree_id += 1\n",
+    "        self.log(\"rtree built.\")\n",
+    "        self.rtree_index = rtree_index\n",
+    "        self.geom_rtree_list = geom_rtree_list\n",
+    "        self.uid_rtree_list = uid_rtree_list\n",
+    "\n",
+    "    def extract_ids(self, intersecting_geom):\n",
+    "        iterator = self.rtree_index.intersection(intersecting_geom.bounds)\n",
+    "        result = []\n",
+    "        for rtree_position in iterator:\n",
+    "            geom = self.geom_rtree_list[rtree_position]\n",
+    "            if not geom.is_valid:\n",
+    "                geom = geom.buffer(-0.001)\n",
+    "            isect = intersecting_geom.intersection(geom)\n",
+    "            if not isect.is_empty:\n",
+    "                result.append(rtree_position)\n",
+    "        return result\n",
+    "\n",
+    "    def select(self, ids):\n",
+    "        return self.gdf.iloc[ids]\n",
+    "\n",
+    "    def log(self, message):\n",
+    "        if self.verbose_function is not None:\n",
+    "            self.verbose_function(f'RTREE[{self.name}]: {message}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "202df75a",
+   "execution_count": 15,
+   "id": "de6c3d44",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rtree_parcels = RtreeIndex(\"parcels\", gdf_parcels)"
+   ]
   },
   {
    "cell_type": "markdown",
