--- a/02_sightlines_plot.ipynb
+++ b/02_sightlines_plot.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "ef397271",
    "metadata": {
     "lines_to_next_cell": 2
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "ff4b5c09",
    "metadata": {},
    "outputs": [],
@@ -1003,26 +1003,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "c0f0d793",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[==================================================] 100% (18 s) 250/259 items proceed"
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"1025242.3457630677 6281620.8638987085 90.88867430365644 90.2608136497438\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,12563331.988611067)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"1.817773486073129\" opacity=\"0.6\" d=\"M 1025328.8301563164,6281675.8117857715 L 1025314.2697206722,6281655.849179947 L 1025304.4541675486,6281648.526261828 L 1025297.6782485276,6281643.806825319 L 1025297.4503875516,6281643.672779477 L 1025297.2225265661,6281643.538733644 L 1025296.9871599076,6281643.393175955 L 1025296.7685040238,6281643.23734231 L 1025296.5487151591,6281643.103708464 L 1025296.3306257394,6281642.936774933 L 1025296.1200419747,6281642.781353271 L 1025295.9100246833,6281642.6148317205 L 1025295.708646016,6281642.437622239 L 1025295.5067008538,6281642.271512661 L 1025295.2966835296,6281642.1049911305 L 1025295.1125820968,6281641.906405799 L 1025294.9192755361,6281641.729608304 L 1025294.7265354462,6281641.54171092 L 1025294.550506131,6281641.343537563 L 1025294.3831154385,6281641.134676277 L 1025294.1909417947,6281640.935679011 L 1025294.0229845984,6281640.73791763 L 1025293.8636660248,6281640.529468316 L 1025293.7464076485,6281640.2897791155 L 1025290.6813966011,6281640.244646002 L 1025286.4610762685,6281636.5125636915 L 1025285.6561261759,6281635.79262708 L 1025285.8825711911,6281633.734225242 L 1025276.6514034747,6281625.584257456 L 1025276.4113622055,6281625.371689177 L 1025276.1776937486,6281625.192832544 L 1025275.9273144848,6281625.024251944 L 1025275.6763687606,6281624.866771254 L 1025275.4317958574,6281624.743002212 L 1025275.1635728704,6281624.606897468 L 1025274.8930840888,6281624.515192335 L 1025274.6070173979,6281624.411563444 L 1025274.3192513634,6281624.341234263 L 1025274.0303524347,6281624.293104896 L 1025273.7414535022,6281624.2449755445 L 1025273.450855236,6281624.230145905 L 1025273.1591240836,6281624.237516078 L 1025272.8593207586,6281624.244474332 L 1025272.5658902834,6281624.285144234 L 1025272.2805319866,6281624.326226081 L 1025272.0009801048,6281624.412119475 L 1025271.7219946713,6281624.48691298 L 1025271.4413099252,6281624.5950062005 L 1025271.1681309232,6281624.714611262 L 1025246.1891148437,6281641.435230509 L 1025245.7120102642,6281641.744749279 L 1025246.7521928363,6281643.088768075 L 1025249.2409837868,6281646.654565081 L 1025255.4201782773,6281655.138420076 L 1025259.595902028,6281661.171867629 L 1025266.3675918225,6281670.732076243 L 1025273.9780524216,6281681.459105689 L 1025280.9413029754,6281691.229425071 L 1025292.5530430975,6281707.758465162 L 1025329.8681901749,6281677.356027927 L 1025328.8301563164,6281675.8117857715 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<POLYGON ((1025328.83 6281675.812, 1025314.27 6281655.849, 1025304.454 62816...>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"1025243.4905248308 6281645.730278121 36.024768203962594 40.548219797201455\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,12563332.008776039)\"><polyline fill=\"none\" stroke=\"#66cc99\" stroke-width=\"0.8109643959440291\" points=\"1025244.9923107493,6281647.232064039 1025278.0135071162,6281684.776712\" opacity=\"0.8\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<LINESTRING (1025244.992 6281647.232, 1025278.014 6281684.777)>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Parcel[3476] validity: True'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'extend_line_end' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 7\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m uid,row \u001b[38;5;129;01min\u001b[39;00m df_sightlines\u001b[38;5;241m.\u001b[39miterrows():   \n\u001b[1;32m      5\u001b[0m     sight_line_values\u001b[38;5;241m=\u001b[39m[uid]\n\u001b[0;32m----> 7\u001b[0m     side_values \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_sigthlines_plot_indicators_one_side\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msight_line_points\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mleft_OS_count\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     10\u001b[0m \u001b[43m        \u001b[49m\u001b[43mrow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mleft_SEQ_OS_endpoints\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m     sight_line_values \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m side_values\n\u001b[1;32m     13\u001b[0m     side_values \u001b[38;5;241m=\u001b[39m compute_sigthlines_plot_indicators_one_side(\n\u001b[1;32m     14\u001b[0m         row\u001b[38;5;241m.\u001b[39msight_line_points,\n\u001b[1;32m     15\u001b[0m         row\u001b[38;5;241m.\u001b[39mright_OS_count,\n\u001b[1;32m     16\u001b[0m         row\u001b[38;5;241m.\u001b[39mright_SEQ_OS_endpoints)\n",
+      "Cell \u001b[0;32mIn[16], line 80\u001b[0m, in \u001b[0;36mcompute_sigthlines_plot_indicators_one_side\u001b[0;34m(sight_line_points, OS_count, SEQ_OS_endpoint)\u001b[0m\n\u001b[1;32m     78\u001b[0m         display(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mParcel[\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmatch_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] validity: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmatch_geom\u001b[38;5;241m.\u001b[39mis_valid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     79\u001b[0m         display(sight_line_geom\u001b[38;5;241m.\u001b[39mis_valid)\n\u001b[0;32m---> 80\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[1;32m     82\u001b[0m \u001b[38;5;66;03m#------- iterate\u001b[39;00m\n\u001b[1;32m     83\u001b[0m idx_end_point\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m\n",
+      "Cell \u001b[0;32mIn[16], line 70\u001b[0m, in \u001b[0;36mcompute_sigthlines_plot_indicators_one_side\u001b[0;34m(sight_line_points, OS_count, SEQ_OS_endpoint)\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m match_geom\u001b[38;5;241m.\u001b[39mis_valid:\n\u001b[1;32m     69\u001b[0m     match_geom\u001b[38;5;241m=\u001b[39mmatch_geom\u001b[38;5;241m.\u001b[39mbuffer(\u001b[38;5;241m0\u001b[39m)\n\u001b[0;32m---> 70\u001b[0m isec \u001b[38;5;241m=\u001b[39m match_geom\u001b[38;5;241m.\u001b[39mintersection(\u001b[43mextend_line_end\u001b[49m(sight_line_geom,PARAM_sight_line_plot_depth_extension))                                \n\u001b[1;32m     71\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(isec,LineString)) \u001b[38;5;129;01mand\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(isec,MultiLineString)):\n\u001b[1;32m     72\u001b[0m     display( (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(isec,LineString)) , (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(isec,MultiLineString)))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'extend_line_end' is not defined"
      ]
     }
    ],
    "source": [
     "values=[]\n",
     "\n",
-    "progress_step = 1000 if len(df_sightlines)>=10000 else 10\n",
-    "progress_chunksize = len(df_sightlines)//progress_step\n",
-    "progress = ProgressBar(progress_step)\n",
-    "\n",
-    "progress_count=0\n",
     "for uid,row in df_sightlines.iterrows():   \n",
     "    \n",
     "    sight_line_values=[uid]\n",
@@ -1041,10 +1084,7 @@
     "    \n",
     "    values.append(sight_line_values)\n",
     "    if len(values)%progress_chunksize==0:\n",
-    "        progress.progress_step(f'{len(values)}/{len(df_sightlines)} items proceed')\n",
-    "    \n",
-    "    \n",
-    "    "
+    "        progress.progress_step(f'{len(values)}/{len(df_sightlines)} items proceed')"
    ]
   },
   {
