--- a/03_sightlines_DEM.ipynb
+++ b/03_sightlines_DEM.ipynb
@@ -2,32 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f69d20e9",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Box({'path_to_caches': 'W:/DATA/Projects/urbaspace/caches', 'path_to_building_clustering': 'W:/DATA/Projects/urbaspace/INBIAC_CLUSTERING'})"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "import os \n",
-    "os.environ[\"PREFECT__USER_CONFIG_PATH\"] = \"c:\\\\git_cloud\\\\urbaspace\\\\flows\\\\config.toml\"\n",
-    "import prefect\n",
-    "config=prefect.config\n",
-    "display(config.urbaspace)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "9bde1a11",
    "metadata": {
@@ -36,46 +10,35 @@
    "outputs": [],
    "source": [
     "import sys; sys.path.append('..')\n",
-    "from prefect import Flow, Task\n",
-    "import prefect\n",
     "import datetime\n",
     "import math\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "from kinaxia.datasets.postgis import *\n",
-    "from kinaxia.geometry import *\n",
-    "import kinaxia.constants as constants\n",
-    "\n",
-    "from rtree import index as rtree_index\n",
-    "import prefect\n",
-    "from shapely.ops import unary_union\n",
-    "import kinaxia.urbaspace.caches\n",
     "import gc\n",
     "import numpy as np\n",
     "import toml\n",
     "import os \n",
-    "from kinaxia.utils import ProgressBar\n",
-    "from shapely.geometry import Point\n",
-    "from zipfile import ZipFile\n",
-    "from kinaxia.datasets.postgis import *\n",
-    "from kinaxia.geometry import *\n",
-    "import kinaxia.constants as constants\n",
     "import seaborn as sns\n",
-    "\n",
     "import pickle\n",
     "import bz2\n",
-    "import py7zr"
+    "\n",
+    "from shapely.geometry import Point\n",
+    "from zipfile import ZipFile\n",
+    "from shapely.ops import unary_union\n",
+    "from rtree import index as rtree_index\n",
+    "\n",
+    "\n",
+    "## Closed-source\n",
+    "\n",
+    "# from kinaxia.datasets.postgis import *\n",
+    "# from kinaxia.geometry import *\n",
+    "# import kinaxia.constants as constants\n",
+    "# from kinaxia.utils import ProgressBar\n",
+    "# from kinaxia.datasets.postgis import *\n",
+    "# from kinaxia.geometry import *\n",
+    "# import kinaxia.constants as constants\n",
+    "# import kinaxia.urbaspace.caches"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "760cac91",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1456,7 +1419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
