--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extract a small rectangular from the original data for quick testing\n",
+    "# Extract a small rectangle from the original data for quick testing\n",
     "\n",
-    "This notebook clips the original data to a small rectangular in order to test\n",
+    "This notebook clips the original data to a small rectangle in order to test\n",
     "on only small portion of geometries for debugging purposes."
    ]
   },
